# Auxiliary

./: .gitignore
.github/: copilot-instructions.md
.github/workflows/: docker-build-push-google-opening-hours.yml  docker-build-push-google-review.yml  docker-build-push-postgres-backup.yml  docker-build-push.yml
auxiliary/: TKWS_Auxiliary.code-workspace
scraper/: .gitignore  pyproject.toml
scraper/core/src/core/: __init__.py  outscraper_client.py  strapi_client.py
scraper/google_business_opening_hours/: .env.example  Dockerfile  README.md  docker-compose.yml
scraper/google_business_opening_hours/src/google_business_opening_hours/: __init__.py  generate_schema.py  main.py  outscraper.py  strapi.py
scraper/google_business_review/: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml
scraper/google_business_review/postman/: google_business_review_api.postman_collection.json
scraper/google_business_review/src/google_business_review/: __init__.py  config.py  generate_schema.py  main.py  outscraper.py  outscraper_client.py  strapi.py  strapi_client.py  timestamp_tracker.py  transform.py
scraper/ig_feed/: readme.md
scraper/ig_feed_scraper/: .env.example  .gitignore  Dockerfile  Instagram_Scraper_API.postman_collection.json  README.md  api.py  docker-compose.yml  ig_scraper.py  pyproject.toml
utils/: pyproject.toml
utils/postgres_azure_backup/: .dockerignore  .env.example  .gitignore  Dockerfile  backup_service.py  docker-compose.yml  pyproject.toml
utils/postgres_azure_backup/src/postgres_azure_backup/: __init__.py  __main__.py  backup_service.py
